--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,15 +39,15 @@ jobs:
           check-latest: true
 
       - name: Build
-        run: go build -v ${{ matrix.version }}/...
+        run: cd ${{ matrix.version }} && go build -v ./...
 
       - name: Test
         if: ${{ matrix.go != '1.16' }}
-        run: go test -v -shuffle on ${{ matrix.version }}/...
+        run: cd ${{ matrix.version }} && go test -v -shuffle on ./...
 
       - name: Test
         if: ${{ matrix.go == '1.16' }}
-        run: go test -v ${{ matrix.version }}/...
+        run: cd ${{ matrix.version }} && go test -v ./...
 
   lint:
     name: Lint
